--- a/russia-tours.html
+++ b/russia-tours.html
@@ -60,7 +60,7 @@
                         <h3 class="region-title">Красная Поляна</h3>
                         <div class="region-content">
                             <img src="images/stars_1.png" alt="img" class="stars">
-                            <h4 class="content-title">Кабардино-Балкария</h4>
+                            <h4 class="content-title">Краснодарский край</h4>
                             <div class="all">
                                 <div class="tour">
                                     <img src="images/small_plane.png" alt="img" class="small_img">
@@ -102,7 +102,7 @@
                         <h3 class="region-title">Домбай</h3>
                         <div class="region-content">
                             <img src="images/stars_1.png" alt="img" class="stars">
-                            <h4 class="content-title">Краснодарский край</h4>
+                            <h4 class="content-title">Карачаево-Черкессия</h4>
                             <div class="all">
                                 <div class="tour">
                                     <img src="images/small_plane.png" alt="img" class="small_img">
@@ -144,7 +144,7 @@
                         <h3 class="region-title">Архыз</h3>
                         <div class="region-content">
                             <img src="images/stars_1.png" alt="img" class="stars">
-                            <h4 class="content-title">Краснодарский край</h4>
+                            <h4 class="content-title">Карачаево-Черкессия</h4>
                             <div class="all">
                                 <div class="tour">
                                     <img src="images/small_plane.png" alt="img" class="small_img">
